--- a/src/blocks/header-nav/header-nav.styl
+++ b/src/blocks/header-nav/header-nav.styl
@@ -5,6 +5,7 @@ $transition-properties = opacity, background-color, color
 $nav--dropdown-margin = 18px
 
 .header-nav-wrapper
+	z-index 4
 	display flex
 	justify-content center
 
@@ -144,6 +145,11 @@ $nav--dropdown-margin = 18px
 			color #fff
 			font-family RobotoCondensedRegular
 
+		&--active-page
+			background-color #fff
+			.header-nav__link
+				color $main-dark-color
+
 	&__element--with-dot
 		margin-right 25px
 		@media screen and (max-width: 1460px)
@@ -165,6 +171,7 @@ $nav--dropdown-margin = 18px
 					top calc(50% - 4px)
 
 .header-nav-dropdown
+	z-index 4
 	background-color alpha(#FFFFFF, 85%)
 	border-radius 5px
 	padding 14px 0
@@ -226,13 +233,12 @@ $nav--dropdown-margin = 18px
 	@media screen and (max-width: 740px)
 		display flex
 
-	&__header
+	&__logo
 		position relative
-		top 1px
-		text-transform uppercase
-		font-family RobotoCondensedRegular
-		color #fff
-		font-size 28px
+		top 4px
+		image-bg("icons/logo.svg")
+		width 210px
+		height 40px
 
 	&__burger
 		size(36px)
@@ -241,6 +247,7 @@ $nav--dropdown-margin = 18px
 			cursor pointer
 
 .header-nav-overlay
+	z-index 3
 	background-color alpha(#111, 85%)
 	position fixed
 	top 0
