change menu close icon & improve animation control

--- a/src/blocks/header-nav/header-nav.styl
+++ b/src/blocks/header-nav/header-nav.styl
@@ -243,6 +243,10 @@ $nav--dropdown-margin = 18px
 	&__burger
 		size(36px)
 		image-bg("icons/burger.svg")
+
+		&--close
+			image-bg("icons/close.svg")
+
 		&:hover
 			cursor pointer
 
