implement skills section

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,7 +1,9 @@
 include ../blocks/header/header
+include ../blocks/section-skills/section-skills
 doctype html
 html(lang='ru')
 	include ./_head
 	body
 		block content
 		+header("Услуги")
+		+section-skills()
