implement go-calculator-section

--- a/src/blocks/header-footer/header-footer.pug
+++ b/src/blocks/header-footer/header-footer.pug
@@ -6,8 +6,8 @@ mixin header-footer()
 		.header-footer-social
 			.header-footer-social__text Мы в социальных сетях:
 			.header-footer-social__icons
-				A(href="http://instagram.com").header-footer-social__icon.header-footer-social__icon--instagram
-				A(href="http://vk.com").header-footer-social__icon.header-footer-social__icon--vk
+				a(href="http://instagram.com").header-footer-social__icon.header-footer-social__icon--instagram
+				a(href="http://vk.com").header-footer-social__icon.header-footer-social__icon--vk
 		.header-footer-telephone
 			.header-footer-telephone__icon
 			.header-footer-telephone__number +7-926-159-82-62
