--- a/src/blocks/skill/skill.pug
+++ b/src/blocks/skill/skill.pug
@@ -4,7 +4,7 @@ mixin skill(header, text, sum, imageModificator)
 			.skill-header-helper.skill-header-helper--left
 			.skill-header-helper.skill-header-helper--right
 		.skill__text= text
-		DIV(class=`skill-image skill-image--${imageModificator}`)
+		div(class=`skill-image skill-image--${imageModificator}`)
 		.skill-info
 			.skill-info__sum От #{sum} ₽
-			BUTTON.skill-info__button Подробнее
+			button.skill-info__button Подробнее
