--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,5 +1,6 @@
 include ../blocks/header/header
 include ../blocks/section-skills/section-skills
+include ../blocks/section-go-calculator/section-go-calculator
 doctype html
 html(lang='ru')
 	include ./_head
@@ -7,3 +8,4 @@ html(lang='ru')
 		block content
 		+header("Услуги")
 		+section-skills()
+		+section-go-calculator()
