--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -2,14 +2,15 @@ include ../header-nav/header-nav
 include ../header-cars/header-cars
 include ../header-footer/header-footer
 mixin header(activePage)
-	HEADER.header
+	header.header
 		+header-cars()
 		+header-nav(activePage)
 		.header-location-wrapper
+			.header-logo
 			.header-location
 				.header-location__text
 					| Мы находимся по адресу:
 					br
 					| г.Москва г.Троицк Калужское шоссе д. 38
-				BUTTON.header-location__button Посмотреть на карте
+				button.header-location__button Посмотреть на карте
 		+header-footer()
