--- a/src/blocks/header/header.styl
+++ b/src/blocks/header/header.styl
@@ -5,6 +5,38 @@
 	@media screen and (max-width: 740px)
 		height 600px
 
+	&-logo
+		position absolute
+		top 65px
+		left 0
+		width calc(210px * 4)
+		height calc(40px * 4)
+		image-bg("icons/logo.svg")
+		opacity 0
+		transition all ease .6s
+		pointer-events none
+
+		&.animated
+			opacity .95
+
+		&.opacitied
+			transition all ease .3s
+			opacity .1
+
+		@media screen and (max-width: 1600px)
+			width calc(210px * 3)
+			height calc(40px * 3)
+			top 80px
+
+		@media screen and (max-width: 1280px)
+			top 186px
+			width calc(210px * 2.6)
+			height calc(40px * 2.6)
+
+		@media screen and (max-width: 740px)
+			display none
+
+
 	&-location-wrapper
 		display flex
 		justify-content flex-end
