--- a/src/blocks/header/header.styl
+++ b/src/blocks/header/header.styl
@@ -2,8 +2,28 @@
 	height 900px
 	image-bg("header-bg.png")
 	position relative
+	overflow hidden
 	@media screen and (max-width: 740px)
 		height 600px
+
+	&__appear
+		position absolute
+		top 0
+		left 0
+		size(100%, 100%)
+		background-color alpha(#fff, 100%)
+		width 10%
+		transition linear 2.5s
+		transition-property transform, background-color
+		opacity 0
+
+		@media screen and (max-width: 740px)
+			display none
+
+		&.animated
+			opacity 1
+			transform translateX(100vw)
+			background-color alpha(#fff, 100%)
 
 	&-logo
 		position absolute
@@ -72,6 +92,27 @@
 				font-size 28px
 				margin-bottom 4px
 
+		&__map
+			position relative
+			clear both
+			size(400px, 280px)
+			float right
+			opacity 0
+			transition opacity ease .6s
+			border 3px solid #fff
+			z-index 200
+
+			@media screen and (max-width: 740px)
+				float none
+				margin 0 auto
+
+			@media screen and (max-width: 420px)
+				size(300px, 210px)
+
+			&.active
+				opacity 1
+
+
 		&__button
 			background-color #939393
 			border none
@@ -86,6 +127,7 @@
 			text-transform uppercase
 			outline none
 			line-height .8
+			margin-bottom 12px
 
 			@media screen and (max-width: 740px)
 				float none
