--- a/src/blocks/section-go-calculator/section-go-calculator.styl
+++ b/src/blocks/section-go-calculator/section-go-calculator.styl
@@ -58,6 +58,7 @@
 		box-shadow 5px 5px 11px alpha($main-color, 38%)
 		transition all ease .3s
 		opacity .92
+		outline none
 		@media screen and (max-width: 800px)
 			font-size 26px
 			padding 10px 50px
