--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -16,4 +16,4 @@ mixin header(activePage)
 					| г.Москва г.Троицк Калужское шоссе д. 38
 				button.header-location__button Показать на карте
 				.header-location__map
-					iframe(src='https://www.google.com/maps/embed?pb=!1m0!4v1498400277817!6m8!1m7!1sUXG73KqUDfTIBOptK19BZg!2m2!1d55.49507073415599!2d37.32906732417598!3f157.48347368765772!4f-2.0965649524616197!5f1.0755731964520003', width='100%', height='100%', frameborder='0', style='border: none', allowfullscreen='')
+					iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d565.0395632696665!2d37.328353529287995!3d55.49476639878032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414aaab1d6f19845%3A0x40407aa194d161c4!2z0JAtMTMwLCAzNSwg0JLQsNGC0YPRgtC40L3QutC4LCDQnNC-0YHQutC-0LLRgdC60LDRjyDQvtCx0LsuLCDQoNC-0YHRgdC40Y8sIDE0MjE5MQ!5e0!3m2!1sru!2s!4v1498411283038', width='100%', height='100%', frameborder='0', style='border: none', allowfullscreen='')
