--- a/src/blocks/header/header.styl
+++ b/src/blocks/header/header.styl
@@ -3,10 +3,12 @@
 	image-bg("header-bg.png")
 	position relative
 	overflow hidden
+
 	@media screen and (max-width: 740px)
 		height 600px
 
 	&__appear
+		display none
 		position absolute
 		top 0
 		left 0
