--- a/src/blocks/section-skills/section-skills.styl
+++ b/src/blocks/section-skills/section-skills.styl
@@ -1,10 +1,12 @@
 .section-skills
 	overflow hidden
-	padding 70px 60px
-
-	@media screen and (max-width: 800px)
-		padding 70px 24px
+	section-padding()
 
 	&__container
 		display flex
 		flex-wrap wrap
+		max-width 1400px
+		margin 0 auto
+
+		@media screen and (max-width: 1200px)
+			max-width 900px
