--- a/src/styles/_mixins.styl
+++ b/src/styles/_mixins.styl
@@ -1,3 +1,9 @@
+// section-padding
+section-padding()
+	padding 50px 60px
+	@media screen and (max-width: 800px)
+		padding 70px 24px
+
 // grid-template-areas
 g-template-areas(areas...)
 	final = ''
