implement multifunctional js and react for calculator-page

--- a/src/blocks/footer/footer.styl
+++ b/src/blocks/footer/footer.styl
@@ -1,7 +1,7 @@
 .footer
 	margin-top 60px
 	section-padding()
-	background linear-gradient(330deg, alpha(#105567, 31%) 0%, #808080 100%)
+	background linear-gradient(330deg, alpha(#2ebbdf, 31%) 0%, #808080 100%)
 	display flex
 	@media screen and (max-width: 900px)
 		flex-direction column
