--- a/src/blocks/section-go-calculator/section-go-calculator.pug
+++ b/src/blocks/section-go-calculator/section-go-calculator.pug
@@ -2,4 +2,4 @@ mixin section-go-calculator()
 	section.section-go-calculator
 		.section-go-calculator__header Калькулятор стоимости услуг
 		.section-go-calculator__text Вам будет предложено выбрать марку и модель Вашего автомобиля из списка для того, чтобы рассчитать предварительную стоимость услуг.
-		button.section-go-calculator__button Рассчитать
+		a(href="./service-calculator.html").section-go-calculator__button Рассчитать
