--- a/src/blocks/section-go-calculator/section-go-calculator.styl
+++ b/src/blocks/section-go-calculator/section-go-calculator.styl
@@ -1,4 +1,6 @@
 .section-go-calculator
+	display flex
+	flex-direction column
 	position relative
 	image-bg("calc-bg.png")
 	color #fff
@@ -59,6 +61,7 @@
 		transition all ease .3s
 		opacity .92
 		outline none
+		color #fff
 		@media screen and (max-width: 800px)
 			font-size 26px
 			padding 10px 50px
