implement logic of calculator

--- a/src/blocks/main-header/main-header.styl
+++ b/src/blocks/main-header/main-header.styl
@@ -1,5 +1,5 @@
 .main-header
-	font-family RObotoCondensedBold
+	font-family RobotoCondensedBold
 	font-size 34px
 	text-transform uppercase
 	color $main-color
