--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -6,4 +6,9 @@
 @import 'base/fonts'
 @import 'base/utilities'
 
+
 @import '../blocks/**/**'
+@import './components/**/**'
+@import './ordinary-react-components/**/**'
+
+@import './custom-components'
