--- a/src/views/calculator-service.pug
+++ b/src/views/calculator-service.pug
@@ -1,5 +1,6 @@
 include ../blocks/header/header
 include ../blocks/footer/footer
+include ../blocks/section-calculator-service/section-calculator-service
 - const {title, menuElements} = htmlWebpackPlugin.options;
 doctype html
 html(lang='ru')
@@ -8,5 +9,5 @@ html(lang='ru')
 	body.calculator-service-page
 		block content
 		+header("Цены", menuElements)
-		#calculator-service
+		+section-calculator-service()
 		+footer(menuElements)
