implement CarInfo component

--- a/src/blocks/section-calculator-service/section-calculator-service.styl
+++ b/src/blocks/section-calculator-service/section-calculator-service.styl
@@ -1,5 +1,7 @@
 .section-calculator-service
 	section-padding()
+	padding-bottom 0
+	overflow hidden
 
 	&__advice
 		font-family RobotoCondensedLight
