--- a/src/styles/components/AutoSelector.styl
+++ b/src/styles/components/AutoSelector.styl
@@ -2,6 +2,13 @@
 	size(240px, 182px)
 	margin-right 40px
 
+	@media screen and (max-width: 1000px)
+		margin-bottom 40px
+
+	@media screen and (max-width: 600px)
+		margin-right 0
+		max-width 320px
+
 	&--mark
 		image-bg("bugatti-mark.png")
 
