--- a/src/views/calculator-service.pug
+++ b/src/views/calculator-service.pug
@@ -10,4 +10,4 @@ html(lang='ru')
 		block content
 		+header("Цены", menuElements)
 		+section-calculator-service()
-		+footer(menuElements)
+		+footer(menuElements, false)
