--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -12,4 +12,4 @@ html(lang='ru')
 		+header("Услуги", menuElements)
 		+section-skills()
 		+section-go-calculator()
-		+footer(menuElements)
+		+footer(menuElements, true)
