--- a/src/blocks/footer/footer.styl
+++ b/src/blocks/footer/footer.styl
@@ -1,8 +1,11 @@
 .footer
-	margin-top 60px
 	section-padding()
 	background linear-gradient(330deg, alpha(#2ebbdf, 31%) 0%, #808080 100%)
 	display flex
+
+	&--with-margin-top
+		margin-top 60px
+
 	@media screen and (max-width: 900px)
 		flex-direction column
 		padding-bottom 30px
