--- a/src/blocks/header-footer/header-footer.pug
+++ b/src/blocks/header-footer/header-footer.pug
@@ -7,7 +7,7 @@ mixin header-footer()
 			.header-footer-social__text Мы в социальных сетях:
 			.header-footer-social__icons
 				a(href="http://instagram.com").header-footer-social__icon.header-footer-social__icon--instagram
-				a(href="http://vk.com").header-footer-social__icon.header-footer-social__icon--vk
+				a(href="https://vk.com/moyka_su").header-footer-social__icon.header-footer-social__icon--vk
 		.header-footer-telephone
 			.header-footer-telephone__icon
 			.header-footer-telephone__number +7-926-159-82-62
