--- a/src/styles/components/Calculator.styl
+++ b/src/styles/components/Calculator.styl
@@ -5,3 +5,19 @@
 	&-data
 		display flex
 		justify-content space-between
+		align-items center
+
+		&__input
+			display flex
+
+			@media screen and (max-width: 600px)
+				flex-direction column
+				align-items center
+
+		&__output
+			display flex
+			max-width 320px
+
+
+		@media screen and (max-width: 1000px)
+			flex-direction column
