--- a/src/views/_head.pug
+++ b/src/views/_head.pug
@@ -8,7 +8,7 @@ head
 	meta(name='cleartype' content='on')
 	meta(name='HandheldFriendly' content='True')
 	meta(name='google' value='notranslate')
-
+	link(rel="icon" type="image/png" href="./images/favicon.png")
 	meta(name='description' content='')
 	meta(name='keywords' content='')
 
