add info to auto.json && small fixes

--- a/src/blocks/header-nav/header-nav.styl
+++ b/src/blocks/header-nav/header-nav.styl
@@ -221,6 +221,10 @@ $nav--dropdown-margin = 18px
 		display block
 		color $main-dark-color
 		background-color #fff
+		transition text-shadow .1s ease
+
+		&:hover
+			text-shadow 1px 1px 1px alpha($main-dark-color, 30%)
 
 .header-nav-mobile
 	position relative
