--- a/src/styles/custom-components.styl
+++ b/src/styles/custom-components.styl
@@ -21,3 +21,16 @@ $select-black-color = alpha(#000, 70%)
 
 	.Select-input
 		color #fff
+
+
+.in-development
+	height 360px
+	display flex
+	align-items center
+	justify-content center
+	&__image
+		size(289px, 301px)
+		image-bg('in-development.png')
+		margin 0 auto
+		margin-bottom -60px
+		filter grayscale(100%)
