--- a/src/blocks/skill/skill.styl
+++ b/src/blocks/skill/skill.styl
@@ -16,6 +16,11 @@ $helper-width-negative = -4px
 	flex-grow 1
 	margin 30px
 	flex-basis calc(25% - 45px)
+	transition all linear .1s
+
+	&:hover
+		cursor pointer
+		transform scale(0.99)
 
 	&:first-child
 		margin-left 0
