--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -11,7 +11,7 @@ mixin footer(menuElements, isMarginTop)
 				.footer-telephone__icon
 				.footer-telephone__number +7-926-159-82-62
 		.footer-part.footer-part--right
-			a(href="./calculator-service.html").footer-go-calculator
+			a(href="./calculator-service.html#calculator-service").footer-go-calculator
 				.footer-go-calculator__text
 					| Калькулятор стоимости
 					br
