--- a/src/views/_in-development.pug
+++ b/src/views/_in-development.pug
@@ -1,2 +1,4 @@
-.in-development
-	.in-development__image
+mixin in-development(pageTitle)
+	.in-development
+		.in-development__text Раздел "#{pageTitle}" находится в разработке
+		.in-development__image
