--- a/src/views/first-visit.pug
+++ b/src/views/first-visit.pug
@@ -6,8 +6,8 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.about-us
-		- const name = "О нас"
+	body.first-vizit
+		- const name = "Первое посещение"
 		block content
 		+header(name, menuElements)
 		+in-development(name)
