--- a/src/views/vacancies.pug
+++ b/src/views/vacancies.pug
@@ -6,8 +6,8 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.about-us
-		- const name = "О нас"
+	body.vacancies
+		- const name = "Вакансии"
 		block content
 		+header(name, menuElements)
 		+in-development(name)
