add contacts page && small fixes

--- a/src/blocks/header-footer/header-footer.pug
+++ b/src/blocks/header-footer/header-footer.pug
@@ -1,8 +1,8 @@
 mixin header-footer()
 	.header-footer
-		.header-footer-work-hours
+		.header-footer-work-hours(title="Круглосуточно")
 			.header-footer-work-hours__icon
-			.header-footer-work-hours__text Круглосуточно
+			a(href="./contacts.html#address").header-footer-work-hours__text Круглосуточно*
 		.header-footer-social
 			.header-footer-social__text Мы в социальных сетях:
 			.header-footer-social__icons
