--- a/src/blocks/header-footer/header-footer.styl
+++ b/src/blocks/header-footer/header-footer.styl
@@ -17,6 +17,10 @@
 		justify-content center
 		align-items center
 		font-size 28px
+
+		&:hover
+			cursor pointer
+
 		@media screen and (max-width: 740px)
 			margin-bottom 10px
 			margin-left 0
