--- a/src/blocks/section-calculator-service/section-calculator-service.pug
+++ b/src/blocks/section-calculator-service/section-calculator-service.pug
@@ -3,4 +3,4 @@ mixin section-calculator-service()
 	.section-calculator-service
 		+main-header("Калькулятор стоимости услуг")
 		.section-calculator-service__advice Выберите марку и модель Вашего автомобиля из списка, чтобы рассчитать предварительную стоимость услуг.
-		#calculator-service(href="#calculator-service")
+		#calculator-service(name="#calculator-service")
