--- a/src/styles/custom-components.styl
+++ b/src/styles/custom-components.styl
@@ -45,3 +45,6 @@ $select-black-color = alpha(#000, 70%)
 		margin 0 auto
 		margin-bottom -60px
 		filter grayscale(100%)
+
+.ReactTable
+	color $main-dark-color
