add good preload

--- a/src/styles/base/core.styl
+++ b/src/styles/base/core.styl
@@ -9,6 +9,7 @@ body
 	line-height $lineHeight
 	font-family $fontFamily
 	color #fff
+	visibility visible
 
 a, a:hover, a:active
 	text-decoration none
