--- a/src/views/_head.pug
+++ b/src/views/_head.pug
@@ -11,5 +11,9 @@ head
 	link(rel="icon" type="image/png" href="./images/favicon.png")
 	meta(name='description' content='')
 	meta(name='keywords' content='')
+	style.
+		body {
+			visibility: hidden;
+		}
 
 	block head
