style fixes && map fixes

--- a/src/blocks/header-footer/header-footer.pug
+++ b/src/blocks/header-footer/header-footer.pug
@@ -1,6 +1,6 @@
 mixin header-footer()
 	.header-footer
-		.header-footer-work-hours(title="Круглосуточно")
+		.header-footer-work-hours(title="C 7:00 до 01:00 (В любое другое время по предварительной записи)")
 			.header-footer-work-hours__icon
 			a(href="./contacts.html#address").header-footer-work-hours__text Круглосуточно*
 		.header-footer-social
