--- a/src/blocks/header-nav/header-nav.pug
+++ b/src/blocks/header-nav/header-nav.pug
@@ -1,7 +1,7 @@
 mixin header-nav(activePage, menuElements)
 	.header-nav-overlay
 	.header-nav-mobile
-		.header-nav-mobile__logo
+		a(href="./index.html").header-nav-mobile__logo
 		.header-nav-mobile__burger
 	nav.header-nav-wrapper
 		ul.header-nav
