--- a/src/styles/components/CarInfo.styl
+++ b/src/styles/components/CarInfo.styl
@@ -23,9 +23,9 @@
 	display flex
 	flex-direction column
 	size(270px, 160px)
-	justify-content space-between
+	justify-content space-around
 	color $main-dark-color
-	font-size 16px
+	font-size 22px
 	font-family RobotoCondensedRegular
 
 	@media screen and (max-width: 400px)
@@ -34,6 +34,7 @@
 	&-sales
 		display flex
 		justify-content space-between
+		display none
 
 	&__price
 		background-color #CECECE
@@ -51,6 +52,7 @@
 		border-radius 3px
 		transition all ease .1s
 		outline none
+		display none
 
 		&:hover
 			background-color #fff
@@ -61,3 +63,4 @@
 		align-items center
 		justify-content space-between
 		font-size 16px
+		display none
