--- a/src/blocks/section-contacts/section-contacts.styl
+++ b/src/blocks/section-contacts/section-contacts.styl
@@ -18,7 +18,7 @@
 				box-sizing border-box
 				display block
 				margin-left 0
-				width calc(100% - 20px)
+				width 100%
 				height 300px
 				margin-top 5px
 
