--- a/src/styles/components/ServiceUnits.styl
+++ b/src/styles/components/ServiceUnits.styl
@@ -7,12 +7,16 @@
 		font-size 26px
 
 	&-left-part
+		flex-grow 1
 		display flex
 		align-items center
+		justify-content space-between
 
 	&-right-part
 		flex-shrink 0
 		display flex
+		position relative
+		z-index 100
 
 	&-element
 		position relative
@@ -44,6 +48,7 @@
 				opacity 0
 
 		&__text
+			display inline-block
 			font-size 19px
 			font-family RobotoCondensedRegular
 
