--- a/src/styles/custom-components.styl
+++ b/src/styles/custom-components.styl
@@ -59,17 +59,6 @@ $select-black-color = alpha($main-color, 95%)
 		height 100%
 		display block
 
-
-		&::after
-			content ""
-			position absolute
-			top 0
-			left 0
-			width 100%
-			height 100%
-			background-color transparent
-
-
 	.rc-checkbox-inner
 		background #CECECE
 		size(20px)
@@ -116,6 +105,9 @@ $select-black-color = alpha($main-color, 95%)
 
 // ReactTable component styles
 
+.react-numeric-input
+	z-index 10000
+	position relative
 
 .ReactTable
 	color $main-dark-color
