--- a/src/blocks/section-price-list/section-price-list.styl
+++ b/src/blocks/section-price-list/section-price-list.styl
@@ -1,2 +1,7 @@
 .section-price-list
+	color $main-dark-color
 	section-padding()
+
+	&-warnings
+		font-family RobotoCondensedRegular
+		font-size 18px
