--- a/src/views/price-list.pug
+++ b/src/views/price-list.pug
@@ -8,7 +8,7 @@ html(lang='ru')
 	include ./_head
 	title= title
 	body.price-list
-		- const name = "Прайс-лист"
+		- const name = "Цены"
 		block content
 		+header(name, menuElements)
 		+section-price-list()
