--- a/src/blocks/header-nav/header-nav.styl
+++ b/src/blocks/header-nav/header-nav.styl
@@ -96,6 +96,7 @@ $nav--dropdown-margin = 18px
 			left 0
 			size(100%, $nav--dropdown-margin)
 			background-color transparent
+			z-index 5
 
 		@media screen and (max-width: 1460px)
 			margin-right 2px
