--- a/src/blocks/section-price-list/section-price-list.pug
+++ b/src/blocks/section-price-list/section-price-list.pug
@@ -10,3 +10,6 @@ mixin section-price-list()
 		.section-price-list-warnings
 			.section-price-list-warning • При сильном загрязнении к цене, указанной в прайсе применяется  коэффициент 1,5
 			.section-price-list-warning • Право определения класса автомобиля остаётся за администратором автомойки
+		a.section-price-list-download-price.section-price-list-download-price--pdf(href="./docs/Прайс ИП Гумбин.pdf" download) Скачать прайс-лист в формате pdf для печати
+		br
+		a.section-price-list-download-price.section-price-list-download-price--doc(href="./docs/Прайс ИП Гумбин.docx" download) Скачать прайс-лист в формате docx для печати
