--- a/src/blocks/section-skills/section-skills.pug
+++ b/src/blocks/section-skills/section-skills.pug
@@ -4,9 +4,9 @@ include ../skill/skill
 mixin section-skills()
 	SECTION.section-skills
 		+main-header("Круглосуточная мойка")
-		+main-subheader("Что мы умеем")
+		+main-subheader("Услуги")
 		.section-skills__container
 			+skill("Мойка кузова", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 300, "1s")
 			+skill("Химчистка салона", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 800, "2s")
 			+skill("Наномойка", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 450, "3s")
-			+skill("Устранение запаха", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 300, "4s")
+			+skill("Дополнительные услуги", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 300, "4s")
