--- a/src/styles/table-styles.styl
+++ b/src/styles/table-styles.styl
@@ -29,3 +29,8 @@
 			font-family RobotoCondensedRegular
 			font-size 18px
 			transition all ease .6s
+
+
+.rt-tr.-even
+	background-color alpha(#ECECEC, 31%)
+	background-color alpha($main-color, 10%)
