--- a/src/views/get-club-card.pug
+++ b/src/views/get-club-card.pug
@@ -7,7 +7,7 @@ html(lang='ru')
 	include ./_head
 	title= title
 	body.get-club-card
-		- const name = "Получить клубную карту"
+		- const name = "Скидки и акции"
 		block content
 		+header(name, menuElements)
 		+in-development(name)
