--- a/src/blocks/footer/footer.styl
+++ b/src/blocks/footer/footer.styl
@@ -57,13 +57,13 @@
 			color #fff
 			font-family RobotoCondensedBold
 			text-transform uppercase
-			font-size 22px
+			font-size 19px
 
 			@media screen and (max-width: 620px)
 				font-size 20px
 
 			@media screen and (max-width: 420px)
-				font-size 16px
+				font-size 17px
 
 			&::after
 				content ""
@@ -91,25 +91,32 @@
 		left 0
 		display flex
 
-	&-telephone
+	&-mail
 		margin-top 30px
 		margin-right 20px
 		display flex
 		align-items flex-end
+
 		@media screen and (max-width: 900px)
 			margin 20px 0
+			align-items center
+
 		&__icon
-			image-bg("icons/telephone.svg")
+			position relative
+			top 4px
+			image-bg("icons/mail.svg")
 			size(40px)
 			margin-right 5px
+			@media screen and (max-width: 900px)
+				position static
 
 			@media screen and (max-width: 740px)
 				size(30px)
 
-		&__number
+		&__address
 			white-space nowrap
 			font-family RobotoCondensedRegular
-			font-size 28px
+			font-size 24px
 			color #fff
 			@media screen and (max-width: 800px)
 				font-size 22px
