--- a/src/blocks/header-footer/header-footer.pug
+++ b/src/blocks/header-footer/header-footer.pug
@@ -1,13 +1,13 @@
 mixin header-footer()
 	.header-footer
 		.header-footer-work-hours(title="C 7:00 до 01:00 (В любое другое время по предварительной записи)")
-			.header-footer-work-hours__icon
 			a(href="./contacts.html#address").header-footer-work-hours__text Круглосуточно*
+			.header-footer-work-hours__icon
 		.header-footer-social
 			.header-footer-social__text Мы в социальных сетях:
 			.header-footer-social__icons
 				a(href="http://instagram.com").header-footer-social__icon.header-footer-social__icon--instagram
 				a(href="https://vk.com/moyka_su").header-footer-social__icon.header-footer-social__icon--vk
-		.header-footer-telephone
-			.header-footer-telephone__icon
-			.header-footer-telephone__number +7-926-159-82-62
+		a(href="mailto:moyka.su@rambler.ru").header-footer-mail
+			.header-footer-mail__icon
+			.header-footer-mail__address moyka.su@rambler.ru
