--- a/src/blocks/header-footer/header-footer.styl
+++ b/src/blocks/header-footer/header-footer.styl
@@ -11,12 +11,13 @@
 		padding-bottom 15px
 
 	&-work-hours
+		position relative
 		margin-left 20px
 		display flex
 		flex-direction column
 		justify-content center
 		align-items center
-		font-size 28px
+		font-size 24px
 
 		&:hover
 			cursor pointer
@@ -25,13 +26,20 @@
 			margin-bottom 10px
 			margin-left 0
 		&__icon
+			position absolute
+			top -82px
 			image-bg("h24.png")
 			size(90px)
 			margin-bottom 2px
 			@media screen and (max-width: 800px)
 				font-size 22px
 
+			@media screen and (max-width: 740px)
+				top -88px
+
 		&__text
+			position relative
+			z-index 1
 			white-space nowrap
 			text-transform uppercase
 			font-family RobotoCondensedLight
@@ -44,24 +52,24 @@
 	&-social
 		display flex
 		align-items center
-		flex-direction column
-		justify-content flex-end
+
+		@media screen and (max-width: 920px)
+			justify-content center
 
 		&__text
 			white-space nowrap
 			font-family RobotoCondensedLight
-			font-size 28px
+			font-size 20px
 			color #fff
-			margin-bottom 10px
+			margin-right 10px
 
-			@media screen and (max-width: 800px)
-				font-size 22px
 
-			@media screen and (max-width: 740px)
+			@media screen and (max-width: 920px)
 				display none
 
 		&__icons
 			display flex
+
 			@media screen and (max-width: 740px)
 				margin-bottom 10px
 
@@ -75,26 +83,26 @@
 				image-bg("icons/vk.svg")
 				size(40px)
 
-	&-telephone
+	&-mail
 		margin-right 20px
 		display flex
-		align-items flex-end
+		align-items center
 		@media screen and (max-width: 740px)
 			justify-content center
 			align-items center
 			margin-right 0
 		&__icon
-			image-bg("icons/telephone.svg")
+			image-bg("icons/mail.svg")
 			size(40px)
 			margin-right 5px
 
 			@media screen and (max-width: 740px)
 				size(30px)
 
-		&__number
+		&__address
 			white-space nowrap
 			font-family RobotoCondensedRegular
-			font-size 28px
+			font-size 24px
 			color #fff
 			@media screen and (max-width: 800px)
 				font-size 22px
