--- a/src/views/accumulations.pug
+++ b/src/views/accumulations.pug
@@ -7,7 +7,7 @@ html(lang='ru')
 	include ./_head
 	title= title
 	body.accumulations
-		- const name = "Накопления"
+		- const name = "Скидки и акции"
 		block content
 		+header(name, menuElements)
 		+in-development(name)
