--- a/src/views/club-card.pug
+++ b/src/views/club-card.pug
@@ -7,7 +7,7 @@ html(lang='ru')
 	include ./_head
 	title= title
 	body.club-card
-		- const name = "Клубная карта"
+		- const name = "Скидки и акции"
 		block content
 		+header(name, menuElements)
 		+in-development(name)
