--- a/src/blocks/section-skills/section-skills.pug
+++ b/src/blocks/section-skills/section-skills.pug
@@ -3,10 +3,46 @@ include ../main-subheader/main-subheader
 include ../skill/skill
 mixin section-skills()
 	SECTION.section-skills
+		.remodal(data-remodal-id='skill-modal--body-wash')
+			button.remodal-close(data-remodal-action='close')
+			h1 Remodal
+			p
+				| Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+			br
+			button.remodal-cancel(data-remodal-action='cancel') Cancel
+			button.remodal-confirm(data-remodal-action='confirm') OK
+
+		.remodal(data-remodal-id='skill-modal--dry-cleaning')
+			button.remodal-close(data-remodal-action='close')
+			h1 Remodal
+			p
+				| Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+			br
+			button.remodal-cancel(data-remodal-action='cancel') Cancel
+			button.remodal-confirm(data-remodal-action='confirm') OK
+
+		.remodal(data-remodal-id='skill-modal--nano-wash')
+			button.remodal-close(data-remodal-action='close')
+			h1 Remodal
+			p
+				| Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+			br
+			button.remodal-cancel(data-remodal-action='cancel') Cancel
+			button.remodal-confirm(data-remodal-action='confirm') OK
+
+		.remodal(data-remodal-id='skill-modal--additional-services')
+			button.remodal-close(data-remodal-action='close')
+			h1 Remodal
+			p
+				| Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+			br
+			button.remodal-cancel(data-remodal-action='cancel') Cancel
+			button.remodal-confirm(data-remodal-action='confirm') OK
+
 		+main-header("Круглосуточная мойка")
 		+main-subheader("Услуги")
 		.section-skills__container
-			+skill("Мойка кузова", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 300, "1s")
-			+skill("Химчистка салона", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 800, "2s")
-			+skill("Наномойка", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 450, "3s")
-			+skill("Дополнительные услуги", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 300, "4s")
+			+skill("Мойка кузова", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 300, "1s", 'body-wash')
+			+skill("Химчистка салона", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 800, "2s", 'dry-cleaning')
+			+skill("Наномойка", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 450, "3s", 'nano-wash')
+			+skill("Дополнительные услуги", "Наши квалифицированные специалисты как следует позаботятся о чистоте Вашего автомобиля", 300, "4s", 'additional-services')
