--- a/src/views/about-us.pug
+++ b/src/views/about-us.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.about-us
+	body.about-us-page
 		- const name = "О нас"
 		block content
 		+header(name, menuElements)
