--- a/src/views/autoclubs.pug
+++ b/src/views/autoclubs.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.autoclubs
+	body.autoclubs-page
 		- const name = "Автоклубам"
 		block content
 		+header(name, menuElements)
