--- a/src/views/first-visit.pug
+++ b/src/views/first-visit.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.first-vizit
+	body.first-vizit-page
 		- const name = "Скидки и акции"
 		block content
 		+header(name, menuElements)
