--- a/src/views/galery.pug
+++ b/src/views/galery.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.galery
+	body.galery-page
 		- const name = "Галерея"
 		block content
 		+header(name, menuElements)
