--- a/src/views/price-list.pug
+++ b/src/views/price-list.pug
@@ -7,7 +7,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.price-list
+	body.price-list-page
 		- const name = "Цены"
 		block content
 		+header(name, menuElements)
