--- a/src/blocks/section-contacts/section-contacts.styl
+++ b/src/blocks/section-contacts/section-contacts.styl
@@ -32,6 +32,7 @@
 		margin-left 10px
 		background-color #eee
 		padding 5px 10px
+		color $main-dark-color
 
 		@media screen and (max-width: 600px)
 			margin-left 0
