--- a/src/views/accumulations.pug
+++ b/src/views/accumulations.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.accumulations
+	body.accumulations-page
 		- const name = "Скидки и акции"
 		block content
 		+header(name, menuElements)
