--- a/src/views/club-card.pug
+++ b/src/views/club-card.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.club-card
+	body.club-card-page
 		- const name = "Скидки и акции"
 		block content
 		+header(name, menuElements)
