--- a/src/views/contacts.pug
+++ b/src/views/contacts.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.club-card
+	body.contacts-page
 		- const name = "Контакты"
 		block content
 		+header(name, menuElements)
