--- a/src/views/discounts.pug
+++ b/src/views/discounts.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.discounts
+	body.discounts-page
 		- const name = "Скидки и акции"
 		block content
 		+header(name, menuElements)
