--- a/src/views/get-club-card.pug
+++ b/src/views/get-club-card.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.get-club-card
+	body.get-club-card-page
 		- const name = "Скидки и акции"
 		block content
 		+header(name, menuElements)
