--- a/src/views/partners.pug
+++ b/src/views/partners.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.partners
+	body.partners-page
 		- const name = "Партнеры"
 		block content
 		+header(name, menuElements)
