--- a/src/views/vacancies.pug
+++ b/src/views/vacancies.pug
@@ -6,7 +6,7 @@ doctype html
 html(lang='ru')
 	include ./_head
 	title= title
-	body.vacancies
+	body.vacancies-page
 		- const name = "Вакансии"
 		block content
 		+header(name, menuElements)
